[tool.black]
line-length=100
target-version=['py38']

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1
known_first_party = "venmo"
skip = "migrations"


[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Evan Purkhiser", email = "evanpurkhiser@gmail.com"},
]
dependencies = ["requests>=2.19.0"]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

