[tool.black]
line-length=100
target-version=['py38']

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1
known_first_party = "venmo"
skip = "migrations"

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[project]
name = "venmo-api-unoffical"
version = "0.0.1"
description = "A python client to the undocumented Venmo API"
authors = [
    {name = "Mark Mohades"},
    {name = "Evan Purkhiser", email = "evanpurkhiser@gmail.com"},
]
dependencies = ["requests>=2.19.0"]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/evanpurkhiser/venmo-api-unofficial"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

